# ai_agent_practice

./: .env.example  .gitignore  README.md  detector.py  executer.py  lesson_dispatcher.py  main.py  pyproject.toml  students.json
my_own_agent/: __init__.py  agent.py
