[project]
name = "my-own-agent"
version = "0.1.0"
description = "나만의 AI Agent 프로젝트"
authors = [
    {name = "BaeSuHan0822",email = "forBaeforBarca@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain (>=1.2.10,<2.0.0)",
    "langgraph (>=1.0.9,<2.0.0)",
    "langsmith (>=0.7.7,<0.8.0)",
    "langchain-openai (>=1.1.10,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
